# nightops_hotel_docs

./: CHANGELOG.md  LICENSE.txt  README.md  VALIDATION_PATCH.json  VALIDATION_UPLOAD_XML.json  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: build-windows.yml  ci.yml  code-review.yml  hardening.yml  quality-gate.yml  release-windows.yml
assets/: README.md
docs/: CLIENT_DELIVERY_GUIDE.md  CODE_REVIEW_DEEP_REPORT.md  EXE_PACKAGING_FINALIZER.md  GITHUB_ARTIFACT_CONTRACT.md  GITHUB_FORCE_BUILD_SCRIPT_ROOT_FIX.md  GITHUB_FULL_RELOAD_GUIDE.md  GITHUB_PYINSTALLER_DIST_FIX.md  GITHUB_PYINSTALLER_SPECPATH_FIX.md  GITHUB_RELEASE_ARTIFACT_FIX.md  GITHUB_REPORTS_ARTIFACTS_FIX.md  GITHUB_REQUIREMENTS_FIX.md  GLOBAL_CODE_REVIEW_GATE.md  OPERATIONAL_PIPELINE_LOCK.md  OPERATOR_DOCUMENTATION_RELEASE.md  REAL_ROBUSTNESS_SUITE.md  REFACTORING_REPORT.md  ROADMAP_PROGRESS_V1291_TO_V1300.md  TEMPLATES_IMPORT_EXPORTS_LOCK.md  USER_EMERGENCY_PLAYBOOK.md  V13_RELEASE_QUALITY_GATE.md  V13_STABLE_RELEASE_MANIFEST.md
examples/: sample_rows.json
packaging/pyinstaller/: nightops_hotel.spec
packaging/windows/: portable_layout.json
scripts/: build_windows.ps1  make_release.ps1  qa_summary.ps1  run_tests.ps1  verify_release_zip.ps1
src/nightops_hotel/: __init__.py  __main__.py  app.py  cli.py
templates/: sample_welcome_letter.html
tests/: test_smoke.py
tests/e2e/: README.md
tests/packaging/: README.md
tests/preproduction/: README.md
tests/production_final/: README.md
tests/regression/: README.md
tests/robustness/: README.md
(+22 files in other folders)
